Fixed too much zoom and added space to the bottom in a different way

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,6 @@ body {
   background-image: url(../images/BG-colour.jpg);
   color: white;
   font-family: 'Roboto', Arial, sans-serif;
-  min-height: 280vh;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.2),
@@ -17,14 +16,6 @@ body {
     only screen and (min-resolution: 120dpi) {
     body {
         zoom: 0.8;
-    }
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-    only screen and (min-device-pixel-ratio: 1.5),
-    only screen and (min-resolution: 120dpi) {
-    body {
-        zoom: 0.7;
     }
 }
 
